# lasio-rs

./: .gitignore  Agents.md  Cargo.toml  README.md  benchmark_09.py  benchmark_performance.py  demo.py  pyproject.toml  sample.las  test_09.py
.github/workflows/: ci.yml  flujodetrabajo.yml
python/lasio_rs/: __init__.py  _lasio_rs.cp313-win_amd64.pyd  las.py
src/: las_items.rs  lib.rs  pybindings.rs  reader.rs
tests/: benchmark.py  compare.py  integration.rs  test_basic.py  verify_api_alignment.py  verify_python_binding.py
