[package]
name = "_lasio_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_lasio_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "1.0"
rayon = "1.7"
log = "0.4"
codepage = "0.1"
encoding_rs = "0.8"
ndarray = "0.15"
