[package]
name = "las_read_rs" # Sugiero que coincida con el nombre en PyPI para evitar confusiones
version = "0.1.6"    # Sube la versión para el próximo release
edition = "2021"

[lib]
name = "_lasio_rs" # El nombre de la librería que importará Python
crate-type = ["cdylib"] # rlib no suele ser necesario para extensiones de Python

[dependencies]
# Actualizado a 0.20 para mejor soporte de Python 3.12+
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "1.0"
rayon = "1.7"
log = "0.4"
codepage = "0.1"
encoding_rs = "0.8"
ndarray = "0.15"