[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[lib]
name = "_lasio_rs"
crate-type = ["cdylib", "rlib"]

[project]
name = "las_read_rs"
version = "0.1.6"
description = "A high-performance LAS (Log ASCII Standard) file reader written in Rust"
authors = [{name = "Emiliano Flores", email = "jemilianofl@github.com"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.maturin]
python-source = "python"
module-name = "lasio_rs._lasio_rs"
